# curl-env

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: ci.yaml
src/: main.rs
src/snapshots/: curl_env__tests__petstore_yaml.snap  petstore.yaml
