[package]
name = "curl-env"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
indexmap = "2.10.0"
openapiv3 = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
url = "2.5.4"
xdg = "3.0.0"
